--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2588,107 +2588,107 @@ stories:
   domain: http://www.mooreamerican.com/
   link: https://www.mooreamerican.com/oklahoma/news/vance-air-force-base-celebrates-th-anniversary-of-its-name/article_5a90edb9-a031-5738-b273-f577985fbcd5.html
 images:
-- name: curtain-curtain-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-soul.jpg
-- name: power-lines-power-lines-empty-space-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-really-hot.jpg
-- name: oldtrain-oldtrain-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gan-vogh.jpg
-- name: crow_creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_creativity.jpg
-- name: bluelake-gred-mash-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-00-00.jpg
-- name: bluelake-post-modern-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-00-00-00.jpg
-- name: blossombar-crafty-painting-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-62.jpg
-- name: old-house-oldhouse-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-graham-sutherland.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
-- name: aws-s3-square-schoolhouse-dark-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-schoolhouse-dark-dali-square.jpg
-- name: legal-statue-legalstatue-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-creativity.jpg
-- name: bluelake-gred-mash-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-01-17-38.jpg
-- name: store-on-corner-oldcabin-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-two.jpg
-- name: white-house-lawn-white-house-lawn-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-graham-sutherland.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-post-modern.jpg
-- name: white-house-lawn-white-house-lawn-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dry-skin.jpg
-- name: downtown-trucksilo-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dry-skin.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-alien-goggles.jpg
-- name: berlinwall2-berlinwall-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crunch-paper.jpg
-- name: miamibeach-miamibeach-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-gred-mash.jpg
-- name: abe-lincoln-one-smoking-cigarette-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-00-00.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-cinnamon-rolls.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-cinnamon-rolls.JPG
-- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
-- name: mediterranean-mediterranean-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-satan-red.jpg
-- name: lincoln-memorial-lincolnmemorial-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-paper.jpg
-- name: dc-statue-dcstatue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-matrix.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-crabapple.jpg
-- name: amusement-park-amusement-park-2-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-smoking-cigarette.jpg
-- name: catacombs-catacombs-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purp-paper.jpg
-- name: status-berlin-status-berlin-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-light-dali.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-emily-carr.jpg
-- name: oldhouse-oldhouse-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-marcel-duchamp.jpg
-- name: old-cabin-oldcabin-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purple-storm.jpg
-- name: bordercrossing-bordercrossing-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-satan-red.jpg
-- name: christianity-christianity-under-construction-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-nazi-poster.jpg
-- name: supreme-court-supremecourt-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-really-hot.jpg
-- name: border-crossing-bordercrossing-bright-sand.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-bright-sand.png
-- name: hollywood-building-hollywood-building-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-kand-two.jpg
-- name: miamibeach-miamibeach-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-mucha-mult.jpg
-- name: art-museum-art-museum-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-atari-missle.jpg
-- name: nyc-flag-nycflag-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-granite.jpg
-- name: downtheline-downtheline-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-creativity.jpg
-- name: server-cloud-server-racks-clouds-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-china-prop.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
-- name: trucksilo-trucksilo-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-monet-one.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-plentiful.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-plentiful.JPG
-- name: dc-statue-dcstatue-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-rainbow-festival.jpg
-- name: store-on-corner-store-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-asteroids.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
-- name: old-granary-field-oldhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-really-hot.jpg
-- name: locked-up-steam-lock-up-steam-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-green-zuma.jpg
+- name: aws-s3-stories-beach-rocks-currents-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beach-rocks-currents-blue-circuit-4.jpg
+- name: flower-barbed-wire-flower-barbed-wire-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-far-away.jpg
+- name: white-house-whitehouse-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-rain.jpg
+- name: cargo-ship-cargo-ship-on-sea.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea.jpg
+- name: ellis-island-ellis-island-room-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-electricity.jpg
+- name: liberty-back-statue-liberty-back-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-smooth-ride.jpg
+- name: yosemite-yosemite-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-aqua.jpg
+- name: fence-mexico-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-collage.jpg
+- name: stories-server-cloud1-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-cloud1-feed-people.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smoking-cigarette.jpg
+- name: oldtrain-oldtrain-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-bright-sand.jpg
+- name: crow-crow-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-kandinsky-bv.jpg
+- name: aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
+- name: stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
+- name: udnie-IMG_2410.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_2410.jpg
+- name: crow-crow-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colored-circuits.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dali-three.jpg
+- name: oldhotel-oldhotel-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-hot-spicy.jpg
+- name: school-clouds-church-clouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-cinnamon-rolls.jpg
+- name: old-gas-pumps-oldgaspumps-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-alien-goggles.jpg
+- name: paris-paris-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-brush.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-aqua.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-aqua.JPG
+- name: blossombar-aqua-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-00-00.jpg
+- name: legal-statue-legalstatue-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-umberto-bocc.jpg
+- name: powerlines-power-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-deep-connections.jpg
+- name: carry-load-carryload-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-color.jpg
+- name: long-factory-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-norman-rockwell-ruby-bridges.jpg
+- name: powerlines-power-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dali-three.jpg
+- name: beach-rocks-beach-rocks-currents-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-bright-sand.jpg
+- name: christianity-christianity-under-construction-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-yellow-paper.jpg
+- name: rain-princess-IMG_6945.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6945.jpg
+- name: nyc-flag-nycflag-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dry-skin.jpg
+- name: mistywoods-babyfoot-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-rainbow-festival.jpg
+- name: cargo-ship-cargo-ship-on-sea-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-sand-paper.jpg
+- name: yuma-bank-yuma-bak-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-aqua.jpg
+- name: old-school-house-old-schoolhouse-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purple-storm.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-marcel-duchamp.jpg
+- name: 35562068104_fa20c57575-udnie.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-udnie.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-satan-red.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-satan-red.JPG
+- name: wind-mills-windmills-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dry-skin.jpg
+- name: art-museum-art-museum-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colorful-blocks.jpg
+- name: death-valley-death-valley-national-park-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-umberto-bocc.jpg
+- name: dragon-desert-desert-dragon-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kandinsky-bv.jpg
+- name: old-school-house-old-schoolhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-three.jpg
+- name: ellis-island-ellisisland-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-kandinsky-bv.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purp-paper.JPG
+- name: miamibeach-miamibeach.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach.jpg
+- name: abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
+- name: razorwire-DSC-0080-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colored-circuits.jpg
+- name: dragon_close-up-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-copper-circuit.jpg
 ---
 Scientists Say Rising Seas Will Break Flooding Records.&nbsp;Do You Take Flowers To A Cemetery For Memorial Day?.&nbsp;Gender Reveal Party Goes Wrong As Car Bursts Into Flames.&nbsp;Acosta Defends Role In Jeffrey Epstein Scandal.&nbsp;The Price Of Paradise.&nbsp;It's That Time! Back To School Fair Saturday.&nbsp;Kankakee To Send Three Track And Field Athletes To Same College.&nbsp;Family Name Lives On In dying Occupation.&nbsp;
